--- a/main.html
+++ b/main.html
@@ -10,8 +10,9 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<main>
 <marquee>Welcome to Acciojobs!</marquee>
-	<a href="https://acciojob.com/blog/"><h2>Blog</h2></a>
+	<a href="https://acciojob.com/blog/"><h1>Blog</h1></a>
 	<div>
 	<a href="https://acciojob.com/blog/brute-force-vs-optimization/"><img src = "https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000" height = "200" alt="image"/></a>
 	<a href="https://acciojob.com/blog/brute-force-vs-optimization/"><h3>Brute Force vs. Optimisation</h3></a>
@@ -29,6 +30,7 @@
 		<a href="https://acciojob.com/blog/10-tips-to-optimize-your-linkedin-profile-and-attract-recruiters/"><h3>10 Tips to Optimize Your LinkedIn Profile and Attract Recruiters</h3></a>
 		<a href="https://acciojob.com/blog/10-tips-to-optimize-your-linkedin-profile-and-attract-recruiters/">As a job seeker, you may wonder how to make your LinkedIn profile stand out to recruiters. Your LinkedIn…</a>
 	</div>
+	</main>
 </body>
 
 </html>
