--- a/main.html
+++ b/main.html
@@ -11,8 +11,8 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<main>
-<marquee>Welcome to Acciojobs!</marquee>
-	<a href="https://acciojob.com/blog/"><h1>Blog</h1></a>
+<marquee><h1>Welcome to Acciojobs!</h1></marquee>
+	<a href="https://acciojob.com/blog/"><h2>Blog</h2></a>
 	<div>
 	<a href="https://acciojob.com/blog/brute-force-vs-optimization/"><img src = "https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000" height = "200px" alt="image"/></a>
 	<a href="https://acciojob.com/blog/brute-force-vs-optimization/"><h3>Brute Force vs. Optimization</h3></a>
